@@ -110,12 +110,12 @@ Bdry(
     All(BDRY_OUTFLOWSUPERSONIC1);
     {Faces(BDRY_INFLOWSUPERSONIC,BDRY_OUTFLOWSUPERSONIC1,  BDRY_SYMMETRICAL2,BDRY_SYMMETRICAL2);}
     for (j,js+1,je-1,
-      Link(is,j,ie-1,j,0);
-      Link(is+1,j,ie,j,0);
+      Link(is,j,ie-1,j,1);
+      Link(is+1,j,ie,j,1);
     );
     for (i,is+1,ie-1,
-      Link(i,js,i,je-1,1);
-      Link(i,js+1,i,je,1);
+      Link(i,js,i,je-1,2);
+      Link(i,js+1,i,je,2);
     );
     {
     Cut(is,js,  ie,je);
